# nix-fonts

./: README.md  catalog.json  flake.nix
checks/: catalog-valid.nix  dafont-build.nix  googlefonts-catalog.nix  googlefonts-dynamic.nix  module-eval.nix
devshells/: default.nix
generator/: Cargo.toml
generator/src/: catalog.rs  hash.rs  main.rs
generator/src/providers/: dafont.rs  fontsquirrel.rs  googlefonts.rs  mod.rs
lib/: dafont.nix  default.nix  fontSquirrel.nix  googlefonts.nix
modules/home/: default.nix
modules/nixos/: default.nix
