[package]
name = "nix-fonts-gen"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Font catalog generator for nix-fonts"
license = "MIT"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hashing
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# Async utilities
async-trait = "0.1"
futures-util = "0.3"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging/Progress
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
